[tool.poetry]
name = "mp3-player"
version = "0.1.0"
description = ""
authors = ["nedogimov-m"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
mutagen = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
